@@ -238,6 +238,7 @@ m329	ATmega329
 m3290	ATmega3290
 m329p	ATmega329P
 m3290p	ATmega3290P
+m32u4	ATmega32U4
 m48	ATmega48
 m64	ATmega64
 m640	ATmega640
